--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/atobatele/fuzzy-barnacle#readme",
   "devDependencies": {
-    "cypress": "^3.8.0"
-  }
+    "cypress": "^3.8.0",
+    "cypress-daywalker": "^0.2.1",
+    "cypress-shadow-dom": "^1.3.0"
+  },
+  "dependencies": {}
 }
