--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ lib-cov
 cypress/videos/
 cypress/videos
 cypress/screenshots
+cypress.env.json
 
 
 # Coverage directory used by tools like istanbul
